# notes

./: .gitignore  LICENSE  README.md  notes.spec  pyproject.toml  readme.md  run_notes.py  setup.py
.github/workflows/: build-and-release.yml  release.yml
src/notes/: __init__.py  cli.py  config.py  main.py
src/notes/exporters/: __init__.py  html_exporter.py  markdown_renderer.py  pdf_exporter.py
src/notes/models/: note.py
src/notes/storage/: __init__.py  backup.py  filesystem.py
src/notes/utils/: editor.py
